Log an error if we fail to close a tree.

refs SERVER-17319